# cryptic

./: README.md  pyproject.toml
src/cryptic/: bip39.py  blob.py  lazy.py
src/tests/: test_bip39.py
